--- a/style.css
+++ b/style.css
@@ -12,7 +12,31 @@
     --orange: #FC7614;
     --white: #FFF;
     --very-dark-blue:#131518;
-    --black-gradient: radial-gradien (98.96% at 50% 0%, #232A34 0%, #181E27 100%)
-    
-
+    --black-gradient: radial-gradient(98.96% at 50% 0%, #232a34 0%, #181e27 100%);
 } 
+body{
+
+    background-color: var(--very-dark-blue);
+     height: 100svh;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.card {
+    background: var(--dark-blue);
+    max-width: 412px;
+    padding: 32px;
+    border-radius: 30px;
+}
+.card h1 {
+    color: var(--white);
+}
+.card p {
+    color: var(--light-grey);
+}
+
+.estrela {
+    background-color: var(--black-gradient);
+    width: 48px;
+    height: 48px;
+}
