--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --orange: #FC7614;
     --white: #FFF;
     --very-dark-blue:#131518;
-    --black-gradient: radial-gradient(98.96% at 50% 0%, #232a34 0%, #181e27 100%);
+    --black-gradient: radial-gradient(98.96% 98.96%  at 50% 0%, #232a34 0%, #181e27 100%);
 } 
 body{
 
@@ -25,7 +25,7 @@ body{
      align-items: center;
 }
 .card {
-    background: var(--dark-blue);
+    background: var(--black-gradient);
     max-width: 412px;
     padding: 32px;
     border-radius: 30px;
@@ -44,7 +44,7 @@ body{
 }
 
 .estrela {
-    background-color: var(--black-gradient);
+    background-color: var(--dark-blue);
     width: 48px;
     height: 48px;
 
