--- a/pages/agradecimento.css
+++ b/pages/agradecimento.css
@@ -13,7 +13,7 @@
     --orange: #FC7614;
     --white: #FFF;
     --very-dark-blue:#131518;
-    --black-gradient: radial-gradient(98.96% at 50% 0%, #232a34 0%, #181e27 100%);
+    --black-gradient: radial-gradient(98.96%  98.96% at 50% 0%, #232a34 0%, #181e27 100%);
 } 
 
 body{
@@ -25,7 +25,7 @@ body{
      align-items: center;
 }
 .card {
-    background: var(--dark-blue);
+    background: var(--black-gradient);
     text-align: center;
     max-width: 412px;
     padding: 45px 32px;
